# dyld-pseudodylib-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/test-pseudodylib/: common-attrs.hpp  common.hpp  test-pseudodylib.hpp  utils.hpp
include/test-pseudodylib-simple/: test-pseudodylib-simple.h
lib/: CMakeLists.txt
lib/test-pseudodylib/: CMakeLists.txt  common-internal.hpp  test-pseudodylib.cpp  utils.cpp
lib/test-pseudodylib-simple/: CMakeLists.txt  test-pseudodylib-simple.c
tools/: CMakeLists.txt
tools/dylib-to-obj/: CMakeLists.txt  dylib-to-obj.cpp
tools/lief-macho-from-scratch-test/: CMakeLists.txt  lief-macho-from-scratch-test.cpp
tools/test-pseudodylib-simple-util/: CMakeLists.txt  embed-test-pseudodylib-simple.S  test-pseudodylib-simple-util.cpp
tools/test-pseudodylib-util/: CMakeLists.txt  test-pseudodylib-util.cpp
